fixed the extra padding added when screen width < 768px to account for new navbar sizing

--- a/scoresheet-app/styles/home.scss
+++ b/scoresheet-app/styles/home.scss
@@ -3,7 +3,7 @@ $font-stack: Arial, Helvetica, sans-serif;
 $logo-height: 35px;
 @media (max-width: 768px) {
   body {
-    padding-top: $logo-height*5;
+    padding-top: $logo-height*3;
   }
 }
 
